[gd_scene load_steps=19 format=3 uid="uid://d3vrc5bqadjsp"]

[ext_resource type="Texture2D" uid="uid://c573bqb6sobxh" path="res://Assets/Sprites/character_0.png" id="1_h2kj3"]
[ext_resource type="Texture2D" uid="uid://dqb8cl3bogo08" path="res://Assets/Sprites/chair.png" id="1_ms4r6"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_tdemq"]
[ext_resource type="Texture2D" uid="uid://bnk1xr1ove10i" path="res://Assets/Sprites/character_1.png" id="2_epc8h"]
[ext_resource type="Script" path="res://Scripts/character.gd" id="3_xuy0s"]
[ext_resource type="Texture2D" uid="uid://cpo2uye081cw6" path="res://Assets/Sprites/bkg.png" id="5_g38ql"]
[ext_resource type="Shader" path="res://Shaders/color_filter.gdshader" id="6_dsifw"]
[ext_resource type="PackedScene" uid="uid://ct34wu11qjtss" path="res://Scenes/UI/button.tscn" id="6_ttd4n"]
[ext_resource type="Script" path="res://Scripts/UI/dialogue_line.gd" id="7_3efn8"]
[ext_resource type="Script" path="res://Scripts/color_filter.gd" id="7_bbc7v"]
[ext_resource type="Theme" uid="uid://bond37gfa0v24" path="res://Styles/style.tres" id="9_3bkww"]

[sub_resource type="AtlasTexture" id="AtlasTexture_56n7y"]
atlas = ExtResource("1_h2kj3")
region = Rect2(0, 0, 16, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhoj5"]
atlas = ExtResource("1_h2kj3")
region = Rect2(16, 0, 16, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ogco"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56n7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhoj5")
}],
"loop": true,
"name": &"default",
"speed": 0.7
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mk7x2"]
atlas = ExtResource("2_epc8h")
region = Rect2(0, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rmh8"]
atlas = ExtResource("2_epc8h")
region = Rect2(20, 0, 20, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_fja25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk7x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rmh8")
}],
"loop": true,
"name": &"default",
"speed": 0.8
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7geq"]
shader = ExtResource("6_dsifw")
shader_parameter/at_night_float = null

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_tdemq")

[node name="Bkg2" type="ColorRect" parent="."]
offset_right = 167.0
offset_bottom = 167.0
color = Color(0.745098, 1, 0.729412, 1)

[node name="Bkg" type="Sprite2D" parent="."]
position = Vector2(90, 119)
texture = ExtResource("5_g38ql")

[node name="Chair" type="Sprite2D" parent="."]
position = Vector2(39, 98.5)
texture = ExtResource("1_ms4r6")

[node name="Character0" type="AnimatedSprite2D" parent="."]
position = Vector2(22, 90)
sprite_frames = SubResource("SpriteFrames_1ogco")
frame_progress = 0.655606
script = ExtResource("3_xuy0s")

[node name="Character1" type="AnimatedSprite2D" parent="."]
position = Vector2(56, 89.5)
sprite_frames = SubResource("SpriteFrames_fja25")
frame_progress = 0.160944
script = ExtResource("3_xuy0s")

[node name="DialogueLine" type="Node2D" parent="."]
script = ExtResource("7_3efn8")

[node name="ColorFilter" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_l7geq")
offset_right = 167.0
offset_bottom = 167.0
mouse_filter = 2
script = ExtResource("7_bbc7v")

[node name="Dialogue" type="RichTextLabel" parent="."]
offset_left = 90.0
offset_top = 40.0
offset_right = 143.0
offset_bottom = 66.0
theme = ExtResource("9_3bkww")
theme_override_colors/default_color = Color(0, 0, 0, 0.568627)
theme_override_constants/line_separation = -3
text = "Dialogue"
scroll_active = false

[node name="Buttons" type="Node2D" parent="."]

[node name="Button" parent="Buttons" instance=ExtResource("6_ttd4n")]
position = Vector2(90, 80)
text = "Test button
Test button"
w = 50.0
h = 15.0

[node name="Button2" parent="Buttons" instance=ExtResource("6_ttd4n")]
position = Vector2(90, 100)
text = "Test button"
w = 50.0
h = 9.0

[node name="Button3" parent="Buttons" instance=ExtResource("6_ttd4n")]
position = Vector2(90, 112)
text = "Test btn"
w = 50.0
h = 9.0

[node name="Button4" parent="Buttons" instance=ExtResource("6_ttd4n")]
position = Vector2(90, 124)
text = "Test btn"
w = 50.0
h = 9.0

[node name="Button5" parent="Buttons" instance=ExtResource("6_ttd4n")]
position = Vector2(90, 136)
text = "Test btn"
w = 50.0
h = 9.0

[node name="NextButton" parent="." instance=ExtResource("6_ttd4n")]
position = Vector2(120, 150)
text = "Next"
w = 20.0
h = 9.0

[connection signal="signal_click" from="Buttons/Button" to="." method="_on_button_signal_click"]
[connection signal="signal_click" from="Buttons/Button2" to="." method="_on_button_2_signal_click"]
[connection signal="signal_click" from="Buttons/Button3" to="." method="_on_button_3_signal_click"]
[connection signal="signal_click" from="Buttons/Button4" to="." method="_on_button_4_signal_click"]
[connection signal="signal_click" from="Buttons/Button5" to="." method="_on_button_5_signal_click"]
[connection signal="signal_click" from="NextButton" to="." method="_on_next_button_signal_click"]
